--- a/web_flask/static/styles/3-footer.css
+++ b/web_flask/static/styles/3-footer.css
@@ -1,1 +1,12 @@
-qwerty
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    height: 60px;
+    border-top: 1px solid #CCCCCC;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
